--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSgTlcmm4RonNskn4eW8Do",
+      "authorship_tag": "ABX9TyPxTV7LZ9f39rZvNG1mXsvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,11 +83,11 @@
         "  print(i)"
       ],
       "metadata": {
-        "id": "rNjruWRyvNdd",
-        "outputId": "93a590cf-d743-426a-8235-a2b3785540c0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rNjruWRyvNdd",
+        "outputId": "93a590cf-d743-426a-8235-a2b3785540c0"
       },
       "execution_count": 3,
       "outputs": [
@@ -140,11 +140,11 @@
         "desserts[\"Scone\"]"
       ],
       "metadata": {
-        "id": "aZLZnfG9ygYN",
-        "outputId": "10205b4f-e89f-49c0-f760-cdceda66f0ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aZLZnfG9ygYN",
+        "outputId": "10205b4f-e89f-49c0-f760-cdceda66f0ba"
       },
       "execution_count": 7,
       "outputs": [
@@ -190,11 +190,11 @@
         "type(stu1)"
       ],
       "metadata": {
-        "id": "ovNuPjBZ0aOs",
-        "outputId": "ac19c382-882c-4b9e-fa02-534ecf95b1c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ovNuPjBZ0aOs",
+        "outputId": "ac19c382-882c-4b9e-fa02-534ecf95b1c9"
       },
       "execution_count": 12,
       "outputs": [
@@ -217,13 +217,13 @@
         "students"
       ],
       "metadata": {
-        "id": "Nj2sSfRy0iV2",
-        "outputId": "63f83e62-2798-464b-a89e-4a44fd75d0d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Nj2sSfRy0iV2",
+        "outputId": "9efb711f-2200-4c88-b810-f5d834781d09"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +235,71 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for studnet in students:\n",
+        "  print(studnet)"
+      ],
+      "metadata": {
+        "id": "20QV69fN1YRX",
+        "outputId": "ceacc45d-d56a-494a-d681-7f9f86112b18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'name': 'robert', 'chinese': 78, 'englist': 98, 'math': 73}\n",
+            "{'name': 'alice', 'chinese': 72, 'englist': 88, 'math': 63}\n",
+            "{'name': 'jennt', 'chinese': 65, 'englist': 78, 'math': 93}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for studnet in students:\n",
+        " print(\"姓名：\",studnet[\"name\"])\n",
+        " print(\"國文成績：\",studnet[\"chinese\"])\n",
+        " print(\"英文成績：\",studnet[\"englist\"])\n",
+        " print(\"數學成績：\",studnet[\"math\"])\n"
+      ],
+      "metadata": {
+        "id": "oYR58DVh1wNq",
+        "outputId": "0944b915-d3cc-44d3-a096-5798db919d4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "姓名： robert\n",
+            "國文成績： 78\n",
+            "英文成績： 98\n",
+            "數學成績： 73\n",
+            "姓名： alice\n",
+            "國文成績： 72\n",
+            "英文成績： 88\n",
+            "數學成績： 63\n",
+            "姓名： jennt\n",
+            "國文成績： 65\n",
+            "英文成績： 78\n",
+            "數學成績： 93\n"
+          ]
         }
       ]
     }
