--- a/lesson4_2.ipynb
+++ b/lesson4_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0+Upt+EH26vM1u1cp1ZCU",
+      "authorship_tag": "ABX9TyOW17kHq7VPM1zWa3Ox7z2g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,77 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# python while迴圈說明"
+      ],
+      "metadata": {
+        "id": "SGgvZWsj8KF5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = 1\n",
+        "while count <= 5:\n",
+        "  print(count)\n",
+        "  count +=1"
+      ],
+      "metadata": {
+        "id": "XFJcNyZJ97Tt",
+        "outputId": "c2e4d937-6f3a-4d29-ccf2-383f9072b347",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "while True:\n",
+        "  num = int(input(\"請輸入一個數字（輸入0結束）：\"))\n",
+        "  if num == 0:\n",
+        "    break\n",
+        "  total += num\n",
+        "print(\"總和：\",total)"
+      ],
+      "metadata": {
+        "id": "QkxCb2mY_g-T",
+        "outputId": "a7fa79e2-f3df-4c7a-ffa9-a58e18316b38",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入一個數字（輸入0結束）：8\n",
+            "請輸入一個數字（輸入0結束）：9\n",
+            "請輸入一個數字（輸入0結束）：0\n",
+            "總和： 17\n"
+          ]
+        }
+      ]
     }
   ]
 }
