--- a/lesson4_2.ipynb
+++ b/lesson4_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2/i2cTnkpSkcG5DvBQ/rv",
+      "authorship_tag": "ABX9TyNQyomsIIY50lMzDFIdVSRx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -132,10 +132,10 @@
         "max = 99\n",
         "count = 0\n",
         "random_number = random.randint(min,max)\n",
-        "#print(random_numer)\n",
+        "#print(random_number)\n",
         "print(\"=============猜數字遊戲開始=======\\n\\n\")\n",
         "while True:\n",
-        " input_number=int(input(f\"請輸入數字（{min}~{max}）:\"))\n",
+        " input_number = int(input(f\"請輸入數字（{min}~{max}）:\"))\n",
         " count += 1\n",
         " if(input_number == random_numer):\n",
         "  print(f\"賓果囉!猜對了,答案是:{input_number}\")\n",
@@ -143,29 +143,59 @@
         "  break\n",
         " elif(input_number > random_number):\n",
         "  print(f\"再小一點\")\n",
+        "  max = input_number - 1\n",
         " elif(input_number < random_number):\n",
         "  print(f\"再大一點\")\n",
+        "  min = input_number + 1\n",
         "\n",
-        "  print(f\"您已經猜了:{count}次\\n\")\n",
+        " print(f\"您已經猜了:{count}次\\n\")\n",
         "\n",
         "print(\"Game Over\")"
       ],
       "metadata": {
-        "id": "qS5Ul9sIHtiQ",
-        "outputId": "d36cf6a7-425b-49a5-b935-a77ab755524b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qS5Ul9sIHtiQ",
+        "outputId": "93d2d63c-88ae-4ded-9bc6-633eb13da6f0"
       },
-      "execution_count": 14,
+      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid character '（' (U+FF08) (<ipython-input-14-8062d7ac88b9>, line 17)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-8062d7ac88b9>\"\u001b[0;36m, line \u001b[0;32m17\u001b[0m\n\u001b[0;31m    print（\"Game Over\"）\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '（' (U+FF08)\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=============猜數字遊戲開始=======\n",
+            "\n",
+            "\n",
+            "請輸入數字（1~99）:50\n",
+            "再大一點\n",
+            "您已經猜了:1次\n",
+            "\n",
+            "請輸入數字（51~99）:80\n",
+            "再大一點\n",
+            "您已經猜了:2次\n",
+            "\n",
+            "請輸入數字（81~99）:90\n",
+            "再大一點\n",
+            "您已經猜了:3次\n",
+            "\n",
+            "請輸入數字（91~99）:95\n",
+            "再大一點\n",
+            "您已經猜了:4次\n",
+            "\n",
+            "請輸入數字（96~99）:98\n",
+            "再小一點\n",
+            "您已經猜了:5次\n",
+            "\n",
+            "請輸入數字（96~97）:97\n",
+            "再小一點\n",
+            "您已經猜了:6次\n",
+            "\n",
+            "請輸入數字（96~96）:96\n",
+            "賓果囉!猜對了,答案是:96\n",
+            "您猜了:7次\n",
+            "Game Over\n"
           ]
         }
       ]
@@ -185,12 +215,12 @@
         "\"你有orange\" +str(orange)+\"個, apple \"+ str(apple)+\"個\""
       ],
       "metadata": {
-        "id": "tP6JO9t6JmoW",
-        "outputId": "1be78eac-d37f-4ee7-8b63-d3886faf413c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "tP6JO9t6JmoW",
+        "outputId": "1be78eac-d37f-4ee7-8b63-d3886faf413c"
       },
       "execution_count": 12,
       "outputs": [
@@ -217,12 +247,12 @@
         "f\"你有orange{orange}個, apple{apple}個\""
       ],
       "metadata": {
-        "id": "baX7zh3AKaI_",
-        "outputId": "1caabfee-1081-4a35-a115-1f2dc5ebda48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "baX7zh3AKaI_",
+        "outputId": "1caabfee-1081-4a35-a115-1f2dc5ebda48"
       },
       "execution_count": 13,
       "outputs": [
