--- a/lesson6_1.ipynb
+++ b/lesson6_1.ipynb
@@ -1,24 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "d22fd5ca",
+   "metadata": {},
+   "source": [
+    "# 結構化專案程式\n",
+    "- function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "3071c72f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m執行具有 'chihlee1 (Python 3.10.16)' 的儲存格需要 ipykernel 套件。\n",
-      "\u001b[1;31m使用所需的套件<a href='command:jupyter.createPythonEnvAndSelectController'>建立 Python 環境</a>。"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! Function!\n"
      ]
     }
    ],
    "source": [
-    "#結構化專案程式\n",
-    "-function"
+    "print(\"Hello! Function!\")"
    ]
   }
  ],
@@ -29,7 +35,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.16"
   }
  },
