--- a/lesson6_1.ipynb
+++ b/lesson6_1.ipynb
@@ -26,6 +26,24 @@
    "source": [
     "print(\"Hello! Function!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a0c743c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! second\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello! second\")"
+   ]
   }
  ],
  "metadata": {
