這是第3次修改

--- a/lesson6_1.ipynb
+++ b/lesson6_1.ipynb
@@ -44,6 +44,24 @@
    "source": [
     "print(\"hello! second\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "666cf7bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello! second\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello! second\")"
+   ]
   }
  ],
  "metadata": {
