--- a/lesson7/lesson7_1.ipynb
+++ b/lesson7/lesson7_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "bcae1cf2",
    "metadata": {},
    "outputs": [
@@ -10,25 +10,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.148148148148145\n",
+      "19.62826470116968\n",
       "正常範圍\n"
      ]
     }
    ],
    "source": [
-    "def caculate_bmi(h:int,w:int)->float:\n",
-    "    return w / (h / 100) ** 2\n",
+    "def caculate_bmi(heihgt:int,weight:int)->float:\n",
+    "    return weight / (height / 100) ** 2\n",
     "\n",
-    "def get_state(b:float)->str:\n",
-    "    if b < 18.5:\n",
+    "def get_state(bmi:float)->str:\n",
+    "    if bmi < 18.5:\n",
     "        return \"體重過輕\"\n",
-    "    elif b < 24:\n",
+    "    elif bmi < 24:\n",
     "        return\"正常範圍\"\n",
-    "    elif b < 27:\n",
+    "    elif bmi < 27:\n",
     "        return\"過重\"\n",
-    "    elif b < 30:\n",
+    "    elif bmi < 30:\n",
     "        return\"輕度肥胖\"\n",
-    "    elif b< 35:\n",
+    "    elif bmi< 35:\n",
     "        return\"中度肥胖\"\n",
     "    else:\n",
     "        return \"重度肥胖\"\n",
