--- a/lesson8/lesson8_2.ipynb
+++ b/lesson8/lesson8_2.ipynb
@@ -240,6 +240,125 @@
    "source": [
     "menu('白酒',entree='牛')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b03aeae4",
+   "metadata": {},
+   "source": [
+    "###  *參數名稱\n",
+    "-沒有限制數量的引數值的呼叫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "9a431e3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_args(*args):\n",
+    "    #tuple\n",
+    "    print(args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cf72f9a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c', True, False)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_args(1, 2, 3, 'a','b','c',True, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e744c547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_kwargs(**kwargs):\n",
+    "    #dictionary詞典物件\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "276551f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_kwargs(one=1, two=2, three=3, four=4, five=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f05bce26",
+   "metadata": {},
+   "source": [
+    "###**參數名稱\n",
+    "沒有限定數量的引數名稱呼叫"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "7f4bf65d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_all(*args,**kwargs):\n",
+    "    print(args)\n",
+    "    print(kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cbe6461a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 'a', 'b', 'c', True, False)\n",
+      "{'one': 1, 'two': 2, 'three': 3, 'four': 4, 'five': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_all(1,2,3,'a','b','c',True,False,one=1,two=2,three=3,four=4,five=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d12e7a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(1,2,3,'a','b,'c',)"
+   ]
   }
  ],
  "metadata": {
