--- a/lesson9/lesson9_1.ipynb
+++ b/lesson9/lesson9_1.ipynb
@@ -1288,6 +1288,27 @@
     "for name in names:\n",
     "    print(name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a672dcdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'with' statement on line 1 (2764112822.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[9], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    names:list = file.readlines()\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'with' statement on line 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"names.txt\",encoding=\"utf-8\") as file:\n",
+    "names:list = file.readlines()\n",
+    "print(len(names))"
+   ]
   }
  ],
  "metadata": {
