--- a/lesson3/lesson13_4.ipynb
+++ b/lesson3/lesson13_4.ipynb
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "444b8370",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "# 假設你的 CSV 檔案名稱為 \"data.csv\"\n",
+    "# 假設你的 CSV 檔案名稱為 \"world.csv\"\n",
     "df = pd.read_csv('world.csv',index_col='國家',usecols=['國家','日期','總確診數','新增確診數','新增死亡數'])\n",
     "mask = df.index ==\"台灣\"\n",
     "taiwan = df[mask]\n",
