--- a/lesson3/lesson13_4.ipynb
+++ b/lesson3/lesson13_4.ipynb
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "90dd636f",
    "metadata": {},
    "outputs": [
@@ -853,13 +853,42 @@
        "台灣  2022-07-05  3929627  35984    103"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "taiwan[taiwan['新增死亡數'] >= 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "da127e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "taiwan.to_csv('taiwan.csv',encoding='utf-8',index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d86e72d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "新增死亡數 >= 100 的筆數有：34 筆\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = (taiwan['新增死亡數'] >= 100).sum()\n",
+    "print(f\"新增死亡數 >= 100 的筆數有：{count} 筆\")"
    ]
   }
  ],
